# Afisha

./: .dockerignore  .env.db  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.email  README.md  docker-compose.yaml  project_analysis.txt  pyproject.toml  requirements.txt
email_notification/: email_sender.py  notification_pb2.py  notification_pb2_grpc.py  requirements.txt  server.py
src/: conftest.py
src/afisha/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/bookings/: admin.py  models.py
src/bookings/migrations/: 0001_initial.py
src/common/management/commands/: wait_for_db.py
src/events/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_rating_options_and_more.py  0003_event_events_even_created_52c227_idx.py  0004_alter_event_seats.py  0005_event_average_rating_event_ratings_count_and_more.py  0006_alter_event_average_rating_alter_event_ratings_count.py
src/events/services/: booking.py  event.py  rating.py
src/notifications/: admin.py  grpc_client.py  models.py  tasks.py
src/notifications/migrations/: 0001_initial.py
src/notifications/protos/: __init__.py  notification.proto  notification_pb2_grpc.py
src/users/: apps.py  middleware.py  models.py  serializers.py  views.py
src/users/migrations/: 0001_initial.py
src/users/services/: auth.py
src/users/tests/: conftest.py  factories.py  test_me_endpoint.py  test_models.py  test_views.py
